sab scrollbar fix

--- a/CSS/theBlur.css
+++ b/CSS/theBlur.css
@@ -1,3 +1,6 @@
+#body-homepage #ascrail2003 {
+    top: 74.5px !important;
+}
 #user-menu-div > div > br {
     display: none;
 }
